--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,20 +1,35 @@
 <resources>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-    </style>
+	<!-- Base application theme, dependent on API level. This theme is replaced 
+		by AppBaseTheme from res/values-vXX/styles.xml on newer devices. -->
+	<style name="AppBaseTheme" parent="android:Theme.Holo.Light">
+		<!-- Theme customizations available in newer API levels can go in res/values-vXX/styles.xml, 
+			while customizations related to backward-compatibility can go here. -->
+	</style>
 
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
+	<!-- Application theme. -->
+	<style name="AppTheme" parent="AppBaseTheme">
+		<!-- All customizations that are NOT specific to a particular API-level 
+			can go here. -->
+	</style>
 
+	<style name="quickContactBadgeStyle">
+		<item name="android:background">@drawable/quickcontact_badge_small</item>
+	</style>
+
+	<style name="DialpadButtonStyle">
+		<item name="android:layout_width">0dip</item>
+		<item name="android:layout_height">match_parent</item>
+		<item name="android:layout_weight">1</item>
+		<item name="android:background">?android:attr/selectableItemBackground</item>
+		<item name="android:soundEffectsEnabled">false</item>
+	</style>
+	<style name="DialtactsDigitsTextAppearance">
+		<item name="android:maxLines">1</item>
+		<item name="android:textSize">@dimen/dialpad_digits_text_size</item>
+		<item name="android:textColor">?android:attr/textColorPrimary</item>
+		<item name="android:freezesText">true</item>
+		<item name="android:editable">true</item>
+		<item name="android:cursorVisible">false</item>
+	</style>
 </resources>
