--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,6 +10,9 @@
         android:layout_height="match_parent" />
 
     <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         layout="@layout/fragment_dialer" />
 
 </RelativeLayout>
