--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,16 +9,23 @@
         android:layout_height="0dp"
         android:layout_weight="1" >
 
-        <ListView
-            android:id="@+id/listview_all_contacts"
+        <FrameLayout
+            android:id="@+id/layout_recent_dial"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true" />
+        
+        <FrameLayout
+            android:id="@+id/layout_search_dial"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true" />
 
         <FrameLayout
-            android:id="@+id/diaPanel"
-            android:layout_alignParentBottom="true"
+            android:id="@+id/layout_dialer_panel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true" />
     </RelativeLayout>
 
     <FrameLayout
@@ -37,7 +44,7 @@
             android:src="@drawable/ic_menu_history_lt" />
 
         <ImageButton
-            android:id="@+id/dialpad_button"
+            android:id="@+id/button_dialpad"
             android:layout_width="@dimen/fake_menu_button_min_width"
             android:layout_height="match_parent"
             android:layout_gravity="bottom|center"
@@ -46,7 +53,7 @@
             android:src="@drawable/ic_menu_dialpad_lt" />
 
         <ImageButton
-            android:id="@+id/dial_button"
+            android:id="@+id/button_dial"
             android:layout_width="@dimen/fake_menu_button_min_width"
             android:layout_height="match_parent"
             android:layout_gravity="bottom|center"
