--- a/res/layout/fragment_dialer.xml
+++ b/res/layout/fragment_dialer.xml
@@ -1,43 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/top"
+<view xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ffffff"
+    class="com.example.quickid.DialpadFragment$DialpadSlidingLinearLayout"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/digits_container"
+    <!-- spacer view -->
+
+    <View
+        android:id="@+id/spacer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#00000000" />
+    <!-- Dialpad shadow -->
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@drawable/shadow_fade_up" />
+
+    <view
+        android:id="@+id/top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dialpad_vertical_margin"
-        android:gravity="center"
-        android:orientation="horizontal" >
+        android:layout_gravity="bottom"
+        class="com.example.quickid.DialpadFragment$HoverIgnoringLinearLayout"
+        android:animateLayoutChanges="true"
+        android:background="@color/background_dialpad"
+        android:layoutDirection="ltr"
+        android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/digits"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/dialpad_separator_line_color" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
+        <include layout="@layout/dialpad_digits" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="8dp" />
+
+        <include layout="@layout/dialpad" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="8dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/dialpad_separator_line_color" />
+
+        <!--
+             "Dialpad chooser" UI, shown only when the user brings up the
+             Dialer while a call is already in progress.
+             When this UI is visible, the other Dialer elements
+             (the textfield/button and the dialpad) are hidden.
+        -->
+
+        <ListView
+            android:id="@+id/dialpadChooser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:focusableInTouchMode="false"
-            android:gravity="center"
-            android:nextFocusRight="@+id/deleteButton"
-            android:scrollHorizontally="true"
-            android:textAppearance="@style/DialtactsDigitsTextAppearance" />
+            android:visibility="gone" />
+    </view>
 
-        <ImageButton
-            android:id="@+id/deleteButton"
-            android:layout_width="56dip"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:background="?android:attr/selectableItemBackground"
-            android:contentDescription="@string/description_delete_button"
-            android:gravity="center"
-            android:src="@drawable/ic_dial_action_delete"
-            android:state_enabled="false" />
-    </LinearLayout>
-
-    <include layout="@layout/dialpad" />
-
-</LinearLayout>
+</view>
