--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="background_dialpad_pressed">#ececec</color>
     <color name="background_dialpad">#ffffff</color>
     <color name="dialpad_secondary_text_color">#8b8b8b</color>
-
-</resources>
+    <color name="dialpad_separator_line_color">#dadada</color>
+</resources>
