--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,13 +10,7 @@
         android:layout_weight="1" >
 
         <FrameLayout
-            android:id="@+id/layout_recent_dial"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true" />
-        
-        <FrameLayout
-            android:id="@+id/layout_search_dial"
+            android:id="@+id/layout_dial"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true" />
