--- a/res/layout/dialpad_digits.xml
+++ b/res/layout/dialpad_digits.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        class="com.example.quickid.DigitsEditText"
+        class="com.example.quickid.view.DigitsEditText"
         android:background="@android:color/transparent"
         android:cursorVisible="false"
         android:editable="true"
