--- a/res/layout/fragment_search.xml
+++ b/res/layout/fragment_search.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
+    <ListView
+        android:id="@+id/listview_search_contact"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
