--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -7,4 +7,19 @@
     <color name="background_dialpad">#ffffff</color>
     <color name="dialpad_secondary_text_color">#8b8b8b</color>
     <color name="dialpad_separator_line_color">#dadada</color>
-</resources>
+
+    <array name="letter_tile_colors">
+        <item>#33b679</item>
+        <item>#536173</item>
+        <item>#855e86</item>
+        <item>#df5948</item>
+        <item>#aeb857</item>
+        <item>#547bca</item>
+        <item>#ae6b23</item>
+        <item>#e5ae4f</item>
+    </array>
+
+    <color name="letter_tile_default_color">#cccccc</color>
+    <color name="letter_tile_font_color">#ffffff</color>
+
+</resources>
