--- a/res/layout/layout_contact_item.xml
+++ b/res/layout/layout_contact_item.xml
@@ -7,10 +7,10 @@
 
     <QuickContactBadge
         android:id="@+id/badge_contact_item"
-        android:background="#fff000"
         style="@style/quickContactBadgeStyle"
         android:layout_width="?android:attr/listPreferredItemHeight"
         android:layout_height="?android:attr/listPreferredItemHeight"
+        android:background="#fff000"
         android:scaleType="centerCrop" />
 
     <LinearLayout
@@ -21,16 +21,29 @@
         android:minHeight="?android:attr/listPreferredItemHeight"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/text_contact_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:singleLine="true" />
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/text_contact_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true" />
+
+            <TextView
+                android:id="@+id/text_contact_pinyin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:singleLine="true" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/text_contact_phone"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true" />
     </LinearLayout>
