--- a/res/layout/layout_calllog_item.xml
+++ b/res/layout/layout_calllog_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_phone_numbers"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerVertical="true"
+    android:background="@drawable/bg_contact_item_normal"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="horizontal"
     android:padding="8dp" >
 
@@ -15,10 +18,10 @@
         android:scaleType="centerCrop" />
 
     <LinearLayout
-        android:id="@+id/layout_phone_numbers"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
+        android:layout_weight="1"
         android:gravity="center_vertical"
         android:minHeight="?android:attr/listPreferredItemHeight"
         android:orientation="vertical" >
@@ -67,5 +70,18 @@
                 android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="?android:attr/listPreferredItemHeight"
+        android:layout_height="?android:attr/listPreferredItemHeight"
+        android:layout_gravity="center" >
+
+        <ImageButton
+            android:id="@+id/button_send_sms"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00000000"
+            android:src="@drawable/sms" />
+    </RelativeLayout>
 
 </LinearLayout>
