--- a/res/layout/layout_contact_item.xml
+++ b/res/layout/layout_contact_item.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_phone_numbers"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_contact_item_normal"
     android:orientation="horizontal"
     android:padding="8dp" >
 
@@ -14,7 +16,6 @@
         android:scaleType="centerCrop" />
 
     <LinearLayout
-        android:id="@+id/layout_phone_numbers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
