--- a/res/layout/layout_phone_view.xml
+++ b/res/layout/layout_phone_view.xml
@@ -2,48 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="8dp" >
 
-    <View
-        android:id="@+id/view_phone_left"
-        android:layout_width="?android:attr/listPreferredItemHeight"
-        android:layout_height="?android:attr/listPreferredItemHeight"
-        android:background="#00000000" />
+    <TextView
+        android:id="@+id/textview_phone_numbers"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:singleLine="true" />
 
-    <LinearLayout
-        android:id="@+id/layout_phone_numbers"
-        android:layout_width="match_parent"
+    <ImageButton
+        android:id="@+id/button_send_sms"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:minHeight="?android:attr/listPreferredItemHeight"
-        android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/text_contact_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:singleLine="true" />
-
-            <TextView
-                android:id="@+id/text_contact_pinyin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:singleLine="true" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/text_contact_phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true" />
-    </LinearLayout>
+        android:background="#00000000"
+        android:src="@drawable/sms" />
 
 </LinearLayout>
