--- a/res/layout/layout_contact_item.xml
+++ b/res/layout/layout_contact_item.xml
@@ -1,52 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout_phone_numbers"
+    android:id="@+id/layout_contact_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_contact_item_normal"
-    android:orientation="horizontal"
-    android:padding="8dp" >
-
-    <QuickContactBadge
-        android:id="@+id/badge_contact_item"
-        style="@style/quickContactBadgeStyle"
-        android:layout_width="?android:attr/listPreferredItemHeight"
-        android:layout_height="?android:attr/listPreferredItemHeight"
-        android:background="#fff000"
-        android:scaleType="centerCrop" />
+    android:layout_height="wrap_content"
+    android:background="#fff000"
+    android:descendantFocusability="blocksDescendants"
+    android:orientation="vertical" >
 
     <LinearLayout
+        android:id="@+id/layout_phone_numbers"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:minHeight="?android:attr/listPreferredItemHeight"
-        android:orientation="vertical" >
+        android:layout_height="@dimen/phone_item_height"
+        android:background="@drawable/bg_contact_item_normal"
+        android:orientation="horizontal"
+        android:padding="8dp" >
+
+        <QuickContactBadge
+            android:id="@+id/badge_contact_item"
+            style="@style/quickContactBadgeStyle"
+            android:layout_width="@dimen/phone_content_height"
+            android:layout_height="@dimen/phone_content_height"
+            android:background="#fff000"
+            android:scaleType="centerCrop" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal" >
+            android:layout_width="0dp"
+            android:layout_height="@dimen/phone_content_height"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/text_contact_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true" />
+
+                <TextView
+                    android:id="@+id/text_contact_pinyin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:singleLine="true" />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/text_contact_name"
+                android:id="@+id/text_contact_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:singleLine="true" />
-
-            <TextView
-                android:id="@+id/text_contact_pinyin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
                 android:singleLine="true" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/text_contact_phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true" />
+        <RelativeLayout
+            android:layout_width="@dimen/phone_content_height"
+            android:layout_height="@dimen/phone_content_height"
+            android:gravity="center" >
+
+            <ImageButton
+                android:id="@+id/button_send_sms"
+                android:layout_width="@dimen/sms_icon_width"
+                android:layout_height="@dimen/sms_icon_width"
+                android:background="#00000000"
+                android:scaleType="centerInside"
+                android:src="@drawable/sms" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_more_phones"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
     </LinearLayout>
 
 </LinearLayout>
