--- a/res/layout/layout_phone_view.xml
+++ b/res/layout/layout_phone_view.xml
@@ -1,24 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_phone"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/phone_item_height"
+    android:background="@drawable/bg_contact_item_normal"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="8dp" >
+
+    <View
+        android:layout_width="@dimen/phone_content_height"
+        android:layout_height="@dimen/phone_content_height"
+        android:background="#00000000" />
 
     <TextView
         android:id="@+id/textview_phone_numbers"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:singleLine="true" />
 
-    <ImageButton
-        android:id="@+id/button_send_sms"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="@dimen/phone_content_height"
+        android:layout_height="@dimen/phone_content_height"
         android:background="#00000000"
-        android:src="@drawable/sms" />
+        android:gravity="center" >
+
+        <ImageButton
+            android:id="@+id/button_send_sms"
+            android:layout_width="@dimen/sms_icon_width"
+            android:layout_height="@dimen/sms_icon_width"
+            android:background="#00000000"
+            android:scaleType="centerInside"
+            android:src="@drawable/sms" />
+    </RelativeLayout>
 
 </LinearLayout>
