--- a/res/layout/fragment_search.xml
+++ b/res/layout/fragment_search.xml
@@ -7,6 +7,7 @@
     <ListView
         android:id="@+id/listview_search_contact"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:divider="@null" />
 
 </LinearLayout>
