--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="contact_splitter_height">30dp</dimen>
     <dimen name="phone_item_height">80dp</dimen>
     <dimen name="phone_item_padding">8dp</dimen>
     <dimen name="phone_content_height">64dp</dimen>
@@ -8,7 +9,7 @@
     <dimen name="phone_name_size">16sp</dimen>
     <dimen name="phone_number_size">12dp</dimen>
     <dimen name="phone_date_size">12dp</dimen>
-    <dimen name="sms_icon_width">48dp</dimen>
+    <dimen name="sms_icon_width">36dp</dimen>
     <dimen name="dialpad_horizontal_margin">4dp</dimen>
     <dimen name="dialpad_digits_text_size">35sp</dimen>
     <dimen name="fake_action_bar_height">60dp</dimen>
