--- a/res/layout/layout_contact_item.xml
+++ b/res/layout/layout_contact_item.xml
@@ -30,12 +30,12 @@
             android:layout_height="@dimen/phone_content_height"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:orientation="vertical" >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:orientation="horizontal" >
 
                 <TextView
@@ -56,6 +56,7 @@
                 android:id="@+id/text_contact_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="5dp"
                 android:singleLine="true" />
         </LinearLayout>
 
