use system vibration and keytone setting and add sidebar to allcontactsaclistview

--- a/res/layout/activity_all_contact.xml
+++ b/res/layout/activity_all_contact.xml
@@ -10,4 +10,10 @@
         android:background="@android:color/white"
         android:divider="@null" />
 
+    <com.example.quickid.view.SideBar
+        android:id="@+id/sidebar_all_contacts"
+        android:layout_width="30dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true" />
+
 </RelativeLayout>
