--- a/res/layout/layout_calllog_item.xml
+++ b/res/layout/layout_calllog_item.xml
@@ -58,7 +58,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginBottom="0dp" />
+                android:layout_marginBottom="0dp"
+                android:contentDescription="@string/app_name" />
 
             <TextView
                 android:id="@+id/textview_call_date"
@@ -81,6 +82,7 @@
             android:layout_width="@dimen/sms_icon_width"
             android:layout_height="@dimen/sms_icon_width"
             android:background="#00000000"
+            android:contentDescription="@string/app_name"
             android:scaleType="centerInside"
             android:src="@drawable/sms" />
     </RelativeLayout>
