--- a/res/layout/layout_phone_view.xml
+++ b/res/layout/layout_phone_view.xml
@@ -33,6 +33,7 @@
             android:layout_width="@dimen/sms_icon_width"
             android:layout_height="@dimen/sms_icon_width"
             android:background="#00000000"
+            android:contentDescription="@string/app_name"
             android:scaleType="centerInside"
             android:src="@drawable/sms" />
     </RelativeLayout>
