--- a/res/layout/activity_all_contact.xml
+++ b/res/layout/activity_all_contact.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.example.quickid.util.PinnedHeaderListView
+    <net.nashlegend.quickid.util.PinnedHeaderListView
         android:id="@+id/listview_all_contacts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:divider="@null" />
 
-    <com.example.quickid.view.SideBar
+    <net.nashlegend.quickid.view.SideBar
         android:id="@+id/sidebar_all_contacts"
         android:layout_width="30dp"
         android:layout_height="match_parent"
