--- a/res/layout/fragment_dialer.xml
+++ b/res/layout/fragment_dialer.xml
@@ -2,7 +2,7 @@
 <view xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    class="com.example.quickid.fragment.DialpadFragment$DialpadSlidingLinearLayout"
+    class="net.nashlegend.quickid.fragment.DialpadFragment$DialpadSlidingLinearLayout"
     android:orientation="vertical" >
 
     <!-- spacer view -->
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        class="com.example.quickid.fragment.DialpadFragment$HoverIgnoringLinearLayout"
+        class="net.nashlegend.quickid.fragment.DialpadFragment$HoverIgnoringLinearLayout"
         android:animateLayoutChanges="true"
         android:background="@color/background_dialpad"
         android:layoutDirection="ltr"
