--- a/res/layout/activity_all_contact.xml
+++ b/res/layout/activity_all_contact.xml
@@ -1,13 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@android:color/white" >
 
     <net.nashlegend.quickid.util.PinnedHeaderListView
         android:id="@+id/listview_all_contacts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
         android:divider="@null" />
 
     <net.nashlegend.quickid.view.SideBar
