--- a/res/layout/layout_calllog_item.xml
+++ b/res/layout/layout_calllog_item.xml
@@ -1,89 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout_phone_numbers"
+    android:id="@+id/layout_contact_root"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/phone_item_height"
-    android:layout_centerVertical="true"
-    android:background="@drawable/bg_contact_item_normal"
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
     android:descendantFocusability="blocksDescendants"
-    android:orientation="horizontal"
-    android:padding="@dimen/phone_item_padding" >
-
-    <QuickContactBadge
-        android:id="@+id/badge_contact_item"
-        style="@style/quickContactBadgeStyle"
-        android:layout_width="@dimen/phone_content_height"
-        android:layout_height="@dimen/phone_content_height"
-        android:background="#fff000"
-        android:scaleType="centerCrop" />
+    android:orientation="vertical"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp" >
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/phone_item_padding"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:minHeight="@dimen/phone_content_height"
-        android:orientation="vertical" >
+        android:id="@+id/layout_phone_numbers"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/phone_item_height"
+        android:layout_centerVertical="true"
+        android:background="@drawable/bg_contact_item_normal"
+        android:descendantFocusability="blocksDescendants"
+        android:orientation="horizontal"
+        android:padding="@dimen/phone_item_padding" >
 
-        <TextView
-            android:id="@+id/text_contact_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:textSize="@dimen/phone_name_size" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/text_contact_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="marquee"
-                android:singleLine="true"
-                android:textSize="@dimen/phone_number_size" />
-        </LinearLayout>
+        <QuickContactBadge
+            android:id="@+id/badge_contact_item"
+            style="@style/quickContactBadgeStyle"
+            android:layout_width="@dimen/phone_content_height"
+            android:layout_height="@dimen/phone_content_height"
+            android:background="#fff000"
+            android:scaleType="centerCrop" />
 
         <LinearLayout
-            android:id="@+id/call_type"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/imageview_call_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginBottom="0dp"
-                android:contentDescription="@string/app_name" />
+            android:layout_marginLeft="@dimen/phone_item_padding"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:minHeight="@dimen/phone_content_height"
+            android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textview_call_date"
+                android:id="@+id/text_contact_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="4dp"
                 android:singleLine="true"
-                android:textSize="@dimen/phone_date_size" />
+                android:textSize="@dimen/phone_name_size" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/text_contact_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="marquee"
+                    android:singleLine="true"
+                    android:textSize="@dimen/phone_number_size" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/call_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/imageview_call_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginBottom="0dp"
+                    android:contentDescription="@string/app_name" />
+
+                <TextView
+                    android:id="@+id/textview_call_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="4dp"
+                    android:singleLine="true"
+                    android:textSize="@dimen/phone_date_size" />
+            </LinearLayout>
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="@dimen/phone_content_height"
+            android:layout_height="@dimen/phone_content_height"
+            android:gravity="center" >
+
+            <ImageButton
+                android:id="@+id/button_send_sms"
+                android:layout_width="@dimen/sms_icon_width"
+                android:layout_height="@dimen/sms_icon_width"
+                android:background="?android:attr/selectableItemBackground"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/sms" />
+        </RelativeLayout>
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="@dimen/phone_content_height"
-        android:layout_height="@dimen/phone_content_height"
-        android:gravity="center" >
-
-        <ImageButton
-            android:id="@+id/button_send_sms"
-            android:layout_width="@dimen/sms_icon_width"
-            android:layout_height="@dimen/sms_icon_width"
-            android:background="?android:attr/selectableItemBackground"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/sms" />
-    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/contact_divider_color" />
 
 </LinearLayout>
