--- a/res/layout/dialpad_digits.xml
+++ b/res/layout/dialpad_digits.xml
@@ -13,7 +13,6 @@
         class="net.nashlegend.quickid.view.DigitsEditText"
         android:background="@android:color/transparent"
         android:cursorVisible="false"
-        android:editable="true"
         android:focusableInTouchMode="true"
         android:fontFamily="sans-serif-light"
         android:freezesText="true"
@@ -22,6 +21,7 @@
         android:paddingLeft="@dimen/dialpad_digits_padding"
         android:scrollHorizontally="true"
         android:singleLine="true"
+        android:inputType="phone"
         android:textColor="@color/dialpad_digits_text_color"
         android:textCursorDrawable="@null"
         android:textSize="@dimen/dialpad_digits_text_size"
