--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
             android:layout_width="@dimen/fake_menu_button_min_width"
             android:layout_height="match_parent"
             android:layout_gravity="bottom|center"
-            android:background="@drawable/btn_call"
+            android:background="?android:attr/selectableItemBackground"
             android:contentDescription="@string/description_dial_button"
             android:src="@drawable/ic_dial_action_call"
             android:visibility="gone" />
